# bookmarks-project

./: .gitignore  README.md  __pyproject.toml  main.py  pyproject.toml
